Added combobox for hardskills and diceTotal for each round

--- a/src/main/resources/fr/ensicaen/ecole/genielogiciel/view/LoginDialog.fxml
+++ b/src/main/resources/fr/ensicaen/ecole/genielogiciel/view/LoginDialog.fxml
@@ -11,6 +11,7 @@
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.collections.FXCollections?>
 <?import java.lang.String?>
+<?import javafx.scene.layout.Region?>
 <GridPane styleClass="dialog" stylesheets="@LoginDialog.css" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fr.ensicaen.ecole.genielogiciel.view.LoginView">
    <columnConstraints>
       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
@@ -27,7 +28,26 @@
         <TextField fx:id="_nickName1" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
         <TextField fx:id="_nickName2" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="1" />
 
-       <ComboBox fx:id="combo_board" GridPane.columnIndex="1" GridPane.rowIndex="4" promptText="%board.button.text">
+       <ComboBox fx:id="combo_hardskill1" GridPane.columnIndex="1" GridPane.rowIndex="2" promptText="%hardskill.button.text">
+           <items>
+               <FXCollections fx:factory="observableArrayList">
+                   <String fx:value="Prepa"/>
+                   <String fx:value="DUT"/>
+                   <String fx:value="Licence"/>
+               </FXCollections>
+           </items>
+       </ComboBox>
+       <ComboBox fx:id="combo_hardskill2" GridPane.columnIndex="2" GridPane.rowIndex="2" promptText="%hardskill.button.text">
+           <items>
+               <FXCollections fx:factory="observableArrayList">
+                   <String fx:value="Prepa"/>
+                   <String fx:value="DUT"/>
+                   <String fx:value="Licence"/>
+               </FXCollections>
+           </items>
+       </ComboBox>
+
+       <ComboBox fx:id="combo_board" GridPane.columnIndex="1" GridPane.rowIndex="3" promptText="%board.button.text">
            <items>
                <FXCollections fx:factory="observableArrayList">
                    <String fx:value="Plateau de base"/>
@@ -36,7 +56,7 @@
            </items>
        </ComboBox>
 
-       <ComboBox fx:id="combo_language" GridPane.columnIndex="2" GridPane.rowIndex="4" promptText="%language.button.text">
+       <ComboBox fx:id="combo_language" GridPane.columnIndex="2" GridPane.rowIndex="3" promptText="%language.button.text">
            <items>
                <FXCollections fx:factory="observableArrayList">
                    <String fx:value="Anglais"/>
